--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glob = "0.3.0"
