--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "safe-rm"
-version = "1.1.0"
+version = "1.2.0"
 authors = ["Francois Marier <francois@fmarier.org>"]
 edition = "2018"
 description = "preventing the accidental deletion of important files"
@@ -14,6 +14,17 @@ publish = false
 
 [dependencies]
 glob = "0.3.0"
+toml = "0.5.8"
+serde_derive = "1.0.126"
+serde = "1.0.126"
 
 [dev-dependencies]
-tempfile = "3.1.0"
+tempfile = "3.2.0"
+
+# Optimize for size
+# https://github.com/johnthagen/min-sized-rust
+[profile.release]
+opt-level = 'z'
+lto = true
+codegen-units = 1
+# panic = 'abort'
